--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ScanT</string>
+    <string name="app_name"></string>
     <string name="action_settings">Settings</string>
 </resources>
